# gentree

./: CMakeLists.txt  README.md  main.cpp
bracket_sequences/: CMakeLists.txt  rand_bracket_seq.cpp  rand_bracket_seq.h  rand_bracket_seq_iface.h
ipc/: ordinal_tree.proto
ordinal_trees/: CMakeLists.txt  rand_ordinal_tree_from_bps.cpp  rand_ordinal_tree_from_bps.h  rand_ordinal_tree_iface.h
stashed/: gentree_uar.cpp
tree_covering/: CMakeLists.txt  main.cpp  tree_covering.cpp  tree_covering.h
utils/: CMakeLists.txt  rand_utils.cpp  rand_utils.h
utils/graphs/: CMakeLists.txt  Graph.cpp  Graph.h
